[package]
name = "baseio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.4"
serde = "1.0.166"
serde_derive = "1.0.126"
thiserror = "1.0"
chrono = "0.4.26"